--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./export/linux/CastleIO.x86_64"
+export_path="export/linux/CastleIO.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -49,7 +49,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="export/macos/CastleIO.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -65,11 +65,11 @@ custom_template/release=""
 debug/export_console_wrapper=1
 application/icon=""
 application/icon_interpolation=4
-application/bundle_identifier=""
+application/bundle_identifier="at.castleIO"
 application/signature=""
 application/app_category="Games"
-application/short_version=""
-application/version=""
+application/short_version="v0.1.0"
+application/version="v0.1.0"
 application/copyright=""
 application/copyright_localized={}
 application/min_macos_version="10.12"
@@ -299,7 +299,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./export/windows/CastleIO.exe"
+export_path="export/windows/CastleIO.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -325,10 +325,10 @@ application/modify_resources=true
 application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
-application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
+application/file_version="v0.1.0"
+application/product_version="v0.1.0"
+application/company_name="castleIO"
+application/product_name="castleIO"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
@@ -364,7 +364,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./export/www/index.html"
+export_path="export/www/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
